# samfhir

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  queensland.lua  samfhir.md
.beads/: issues.jsonl  metadata.json
backend/: Dockerfile  pyproject.toml
backend/src/samfhir/: config.py  dependencies.py  main.py  seed.py
backend/src/samfhir/adapters/: __init__.py
backend/src/samfhir/adapters/inbound/api/: __init__.py  fhir_router.py  health_router.py  patient_router.py  seed_router.py
backend/src/samfhir/adapters/inbound/api/schemas/: __init__.py  patient_schemas.py
backend/src/samfhir/adapters/outbound/: __init__.py  hapi_fhir_client.py  redis_cache.py  stub_fhir_client.py
backend/src/samfhir/domain/: __init__.py
backend/src/samfhir/domain/models/: __init__.py  errors.py  observation.py  patient.py
backend/src/samfhir/domain/ports/: __init__.py  cache_port.py  fhir_port.py
backend/src/samfhir/domain/services/: __init__.py  patient_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_hapi_live.py  test_patient_router.py  test_redis_cache.py  test_seed_router.py
backend/tests/unit/adapters/: test_hapi_fhir_client.py
backend/tests/unit/domain/: test_patient_service.py
docs/: phase2.md  phase3.md  phase_1.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  test-setup.ts  test-utils.tsx
terraform/: artifact_registry.tf  cloud_run.tf  dns.tf  main.tf  networking.tf  outputs.tf  redis.tf  terraform.tfvars.example  variables.tf
(+48 files in other folders)
