[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samfhir"
version = "0.1.0"
description = "FHIR patient data viewer backed by HAPI FHIR / Epic sandboxes"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "redis[hiredis]",
    "httpx",
    "fhir.resources",
    "fhirpy",
    "authlib",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests against real HAPI FHIR server (skip with -m 'not live')",
]
